# IT610101BWallace

./: 000-default.conf  5minreport  BrowserReport  README.md  apache.crt  apache.key  apache2.conf  commands.cfg  crontab  default-ssl.conf  lazymovehere  lazymoveout  root
AWS/: 3server_raw  3server_setup.md.html  3server_setup.txt
AWS/backend/: backupscript  nrpe.cfg  root
AWS/nagios/: apache_host.cfg  commands.cfg  contacts.cfg  localhost.cfg  mysql_server.cfg  ssmtp.conf
bootstrapproject/: package.json
bootstrapproject/.meteor/: .id
bootstrapproject/.meteor/local/: dev_bundle  resolver-result-cache.json
bootstrapproject/bootstrap/: index.html
bootstrapproject/bootstrap/docs/4.0/examples/cover/: index.html
bootstrapproject/client/: main.html
nagios-4.2.0/: Makefile  config.status  pkginfo  subst
nagios-4.2.0/base/: nagios  nagiostats
nagios-4.2.0/cgi/: archivejson.cgi  avail.cgi  cmd.cgi  config.cgi  extinfo.cgi  histogram.cgi  history.cgi  notifications.cgi  objectjson.cgi  outages.cgi  showlog.cgi  status.cgi  statusjson.cgi  statusmap.cgi  statuswml.cgi  statuswrl.cgi  summary.cgi  tac.cgi  trends.cgi
nagios-4.2.0/contrib/: Makefile
nagios-4.2.0/html/: Makefile
nagios-4.2.0/html/d3/: d3.js
nagios-4.2.0/include/: config.h
nagios-4.2.0/sample-config/: mrtg.cfg  nagios.cfg
nagios-4.2.0/sample-config/template-object/: commands.cfg
nagios-4.2.0/worker/ping/: worker-ping
nagios-plugins-2.1.2/: Makefile  config.h  config.status  libtool
nagios-plugins-2.1.2/gl/: Makefile
nagios-plugins-2.1.2/lib/: Makefile
nagios-plugins-2.1.2/lib/.deps/: extra_opts.Po  parse_ini.Po  utils_base.Po  utils_cmd.Po  utils_disk.Po  utils_tcp.Po
nagios-plugins-2.1.2/lib/tests/: Makefile
nagios-plugins-2.1.2/perlmods/: Makefile
nagios-plugins-2.1.2/pkg/solaris/: pkginfo
nagios-plugins-2.1.2/plugins/: Makefile  check_apt  check_by_ssh  check_cluster  check_dig  check_disk  check_dns  check_dummy  check_http  check_ide_smart  check_load  check_mrtg  check_mrtgtraf  check_nagios  check_nt  check_ntp  check_ntp_peer  check_ntp_time  check_nwstat  check_overcr  check_ping  check_procs  check_real  check_smtp  check_ssh  check_swap  check_tcp  check_time  check_ups  check_uptime  check_users  negate  urlize
nagios-plugins-2.1.2/plugins-root/: Makefile  check_dhcp  check_icmp
nagios-plugins-2.1.2/plugins-root/.deps/: check_dhcp.Po  check_icmp.Po
nagios-plugins-2.1.2/plugins-scripts/: Makefile
nagios-plugins-2.1.2/plugins/.deps/: check_apt.Po  check_by_ssh.Po  check_cluster.Po  check_dig.Po  check_disk.Po  check_dns.Po  check_dummy.Po  check_http.Po  check_ide_smart.Po  check_load.Po  check_mrtg.Po  check_mrtgtraf.Po  check_nagios.Po  check_nt.Po  check_ntp.Po  check_ntp_peer.Po  check_ntp_time.Po  check_nwstat.Po  check_overcr.Po  check_ping.Po  check_procs.Po  check_real.Po  check_smtp.Po  check_ssh.Po  check_swap.Po  check_tcp.Po  check_time.Po  check_ups.Po  check_uptime.Po  check_users.Po  negate.Po  netutils.Po  popen.Po  runcmd.Po  sslutils.Po  urlize.Po  utils.Po
nagios-plugins-2.1.2/po/: Makefile  Makefile.in
nagios-plugins-2.1.2/tap/: Makefile
nagios-plugins-uptime-7/: Makefile  Makefile.in  NEWS  README  TODO  config.h  config.hin  config.status  configure  configure.ac
nagios-plugins-uptime-7/src/: Makefile  Makefile.am  Makefile.in  check_uptime  check_uptime.c  nputils.c  nputils.h
nagios-plugins-uptime-7/src/.deps/: check_uptime.Po  nputils.Po
